--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -61,7 +61,7 @@
         <img src="css/images/Fire+Pit.jpg" alt="">
         <img src="css/images/Breakfast.jpg" alt="">
         <img src="css/images/CommonArea3.jpg" alt="">
-        <img src="css/images/Exterior1.JPG" alt="">
+        <img src="css/images/TVLoft.jpg" alt="">
       </div>
       <div class="column">
         <img src="css/images/6+Person+Bunk+Room.jpg" alt="">
@@ -74,7 +74,7 @@
           <img src="css/images/Guest+Book.jpg" alt="">
           <img src="css/images/morning.jpg" alt="">
           <img src="css/images/Z+Table+Tall.jpg" alt="">
-          <img src="css/images/TVLoft.jpg" alt="">
+          <img src="css/images/King+Lodge.jpg" alt="">
       </div>
     </div>
   </div>
