--- a/rooms/catacombs.html
+++ b/rooms/catacombs.html
@@ -40,7 +40,7 @@
                     <a class="nav-link text-center" href="#contactus">Contact Us</a>
                 </li>
                 <li class="nav-item text-center">
-                    <a class="nav-link text-center" href="#">About Us</a>
+                    <a class="nav-link text-center" href="../aboutus/about.html">About Us</a>
                 </li>
             </ul>
         </div>
