--- a/index.html
+++ b/index.html
@@ -214,6 +214,7 @@
             <div class="text-center">
                 Thanks for visiting the site!
             </div>
+            <a class="gotopbtn" href="#"> <i class="fas fa-arrow-up"></i> </a>
         </div>
     </footer>
 </body>
