--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
     <Title>Sukhmani Hostel | Home</Title>
 </head>
 
-<body>
+<body onload="myfunction()">
+    
+    <div id="loading"></div>
+    
     <nav class="navbar navbar-expand-md navbar-dark">
         <!-- Brand/logo -->
         <a class="navbar-brand" href="index.html">
@@ -217,6 +220,12 @@
             <a class="gotopbtn" href="#"> <i class="fas fa-arrow-up"></i> </a>
         </div>
     </footer>
+    <script>
+        var preload = document.getElementById('loading');
+        var myfunction = function() {
+        preload.style.display = 'none';
+        }
+    </script>
 </body>
 
 </html>
