--- a/registration/registration.html
+++ b/registration/registration.html
@@ -63,7 +63,7 @@
          
           <div col-sm>
             <label for="email"> Email ID: </label>
-            <input type="email" name="email" placeholder="xyz@gamil.com" class="form-control" id="email"
+            <input type="email" name="email" placeholder="xyz@gmail.com" class="form-control" id="email"
                         onkeyup="return funmail()" required>
           </div>
           
