--- a/aboutus/about.html
+++ b/aboutus/about.html
@@ -38,7 +38,7 @@
                     <a class="nav-link text-center" href="../gallery/gallery.html">Gallery</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-center" href="#contactus">Contact Us</a>
+                    <a class="nav-link text-center" href="../contactus/contact.html">Contact Us</a>
                 </li>
                 <li class="nav-item text-center">
                     <a class="nav-link text-center" href="about.html">About Us</a>
