--- a/rooms/catacombs.html
+++ b/rooms/catacombs.html
@@ -37,7 +37,7 @@
                     <a class="nav-link text-center" href="../gallery/gallery.html">Gallery</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-center" href="#contactus">Contact Us</a>
+                    <a class="nav-link text-center" href="../contactus/contact.html">Contact Us</a>
                 </li>
                 <li class="nav-item text-center">
                     <a class="nav-link text-center" href="../aboutus/about.html">About Us</a>
