--- a/contactus/contact.html
+++ b/contactus/contact.html
@@ -79,7 +79,7 @@
                 </div> <br>
             </div>
             <div class="col-md">
-                <strong id="headname">Sukhmani Hostel</strong><br>
+                <strong>Sukhmani Hostel</strong><br>
                 <small>Vishnupuri, Nanded <br>Maharashtra 431606</small> <br> <br>
                 <div class="map">
                     <iframe
