--- a/contactus/contact.html
+++ b/contactus/contact.html
@@ -91,7 +91,7 @@
         </div>
     </div> <br>
     <script src="validation.js"></script>
-    <div class="container">`
+    <div class="container">
         <h1 class="text-center"><strong>Follow us on social media</strong></h1>
         <div class="wrapper1">
             <div><i class="fab fa-facebook-f"></i></div>
