--- a/aboutus/about.html
+++ b/aboutus/about.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="../bootstrap-4.5.2-dist/css/bootstrap.css">
     <link rel="stylesheet" href="../bootstrap-4.5.2-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
-        integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+    https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css
     <link rel="stylesheet" href="css/about.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
@@ -76,7 +75,7 @@
                     Maharashtra 431606 <br>
                     <a href="#" style="text-decoration: none; color: white;">
                         <i class="fa fa-envelope" aria-hidden="true"></i> info@smhostel.com</a><br>
-                    <img src="../css/images/call.png" alt=""> +91 0123456789
+                    <i class="fas fa-phone-volume"></i> +91 0123456789
                     <hr class="visible-xs">
                 </section>
                 <section id="map" class="col-md-4 container-fluid">
