--- a/rooms/king_lodge.html
+++ b/rooms/king_lodge.html
@@ -90,7 +90,7 @@
                     Maharashtra 431606 <br>
                     <a href="#" style="text-decoration: none; color: white;">
                         <i class="fa fa-envelope" aria-hidden="true"></i> info@smhostel.com</a><br>
-                    <img src="../css/images/call.png" alt=""> +91 0123456789
+                    <i class="fas fa-phone-volume"></i> +91 0123456789
                     <hr class="visible-xs">
                 </section>
                 <section id="map" class="col-md-4 container-fluid">
